# inspect-evals-starter

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: eval_config.yaml
data/samples/: outputs.jsonl  prompts.jsonl
policies/: base_policy.yaml  harmful_content.yaml  jailbreak.yaml  pii.yaml
scripts/: run_eval.py  summarize_results.py
src/inspect_evals/: __init__.py  datasets.py  evaluator.py  policies.py  report.py  utils.py
src/inspect_evals/checks/: __init__.py  jailbreaks.py  pii.py  safety.py
tests/: test_evaluator.py  test_policies.py
